fix: section background overflow issue after upgrading to Xerte 3.13

--- a/Bootstrap/page layouts/_article.scss
+++ b/Bootstrap/page layouts/_article.scss
@@ -47,6 +47,7 @@ section {
     background: none;
     margin: 0;
     padding-block: var(--size-fluid-4);
+    overflow: revert; // fix for the overflow issue after upgrading to Xerte 3.13
 }
 
 section::before {
