--- a/css/bs_article.css
+++ b/css/bs_article.css
@@ -1526,6 +1526,7 @@ section {
   background: none;
   margin: 0;
   padding-block: var(--size-fluid-4);
+  overflow: revert;
 }
 
 section::before {
